argocd/applications/default/grocy/90-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grocy-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "kokev-issuer"
spec:
  ingressClassName: nginx-external
  rules:
    - host: grocy.kokev.de
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: grocy-service
                port:
                  number: 80
            path: /
  tls:
    - hosts:
      - grocy.kokev.de
      secretName: grocy-tls
